acmacs.r NEWS -- history of user-visible changes.

* Changes in 4.0 (2019-12-19)
** chart$new_projection_with_layout(minimum_column_basis, matrix(...)), columns of the matrix corresponds to the dimensions of the layout
** chart$relax_incremental()
** chart$merge.1() .. chart$merge.5(), see https://github.com/acorg/acmacs-chart-2/blob/master/doc/merge-types.org

* Changes in 3.6 (2019-07-10)
** bug fix in procrustes for layouts with common disconnected points

* Changes in 3.5 (2019-07-01)
** bug fix in merging titers for multi-layered source charts

* Changes in 3.4 (2019-06-09)
** bug fix (resetting transformation upon relaxing a projection)
** bug fix, avoid running grid test for points having no titers at all

* Changes in 3.3 (2019-06-05)
** chart$extension_field() and chart$set_extension_field()

* Changes in 3.2 (2019-05-24)
** chart$save() returns string with chart saved in ace format (uncompressed)
** trying to relax projection when chart has no titers leads to an exception (randomizer_plain_from_sample_optimization_internal: diameter is 0)

* Changes in 3.1 (2019-05-13)
** chart$plot_spec$styles_as_data_frame()
** chart$plot_spec$set_styles(<data-frame returned by styles_as_data_frame())
** chart$plot_spec$set_outline_width(), set_shown(), set_rotation(), set_aspect(), set_shape(), set_label_shown(), set_label_offset_x(), set_label_offset_y(), set_label_size(), set_label_color(), set_label_rotation(), set_label_slant(), set_label_weight(), set_label_font_family(), set_label_text()

* Changes in 3.0 (2019-05-10)
** Workaround for libomp mutliple initialiation issue and corresponding crash
** Checking titer value when it is set (negative and non-integer titers forbidden)
** chart$name returns just name, can be empty if it was not set
** chart$column_bases() method takes a 1-based projection number
** use projection$set_transformation(matrix(...)), projection$transformation <- matrix(...) does not work (bug in Rcpp?)