@@ -243,7 +243,10 @@ Chart merge_overlay(Chart chart1, Chart chart2);
 Chart merge_frozen(Chart chart1, Chart chart2);
 std::string merge_report(Chart chart1, Chart chart2, std::string match_level);
 
-Rcpp::DataFrame map_resolution_test(Chart chart, const Rcpp::IntegerVector& number_of_dimensions, const Rcpp::NumericVector& proportions_to_dont_care, std::string minimum_column_basis, bool column_bases_from_master, bool relax_from_full_table);
+Rcpp::DataFrame map_resolution_test(Chart chart, const Rcpp::IntegerVector& number_of_dimensions,
+                                    const Rcpp::NumericVector& proportions_to_dont_care, std::string minimum_column_basis,
+                                    bool column_bases_from_master, bool relax_from_full_table,
+                                    size_t number_of_optimizations);
 
 // ----------------------------------------------------------------------
 
